deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: metadata
spec:
  selector:
    matchLabels:
      app: metadata
  replicas: 1
  template:
    metadata:
      labels:
        app: metadata
    spec:
      containers:
        - image: "igrubio/metadata:2022"
          imagePullPolicy: IfNotPresent
          name: metadata
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
