services.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: metadata
spec:
  selector:
    app: metadata
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
