ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metadata
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: metadata.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: metadata
                port:
                  number: 80
